src/main/java/com/example/pruebatec/error/InvalidEmailException.java
package com.example.pruebatec.error;

public class InvalidEmailException extends Exception{
    public InvalidEmailException(String message) {
        super(message);
    }
}
